# ChangeLog for net-analyzer/netselect
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/netselect/ChangeLog,v 1.37 2008/08/27 10:03:56 armin76 Exp $

  27 Aug 2008; Raúl Porcel <armin76@gentoo.org> netselect-0.3-r1.ebuild,
  netselect-0.3-r2.ebuild:
  Remove bindnow-flags

  09 Nov 2007; Fabian Groffen <grobian@gentoo.org> netselect-0.3-r1.ebuild,
  netselect-0.3-r2.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  06 Nov 2007; Markus Rothe <corsair@gentoo.org> netselect-0.3-r2.ebuild:
  Stable on ppc64; bug #197745

  02 Nov 2007; Lars Weiler <pylon@gentoo.org> netselect-0.3-r2.ebuild:
  stable ppc, bug #197745

  02 Nov 2007; Jeroen Roovers <jer@gentoo.org> netselect-0.3-r2.ebuild:
  Stable for HPPA (bug #197745).

  02 Nov 2007; Steve Dibb <beandog@gentoo.org> netselect-0.3-r2.ebuild:
  amd64 stable, bug 197745

  01 Nov 2007; Raúl Porcel <armin76@gentoo.org> netselect-0.3-r2.ebuild:
  alpha/ia64/sparc/x86 stable wrt #197745

*netselect-0.3-r2 (29 Sep 2007)

  29 Sep 2007; <pva@gentoo.org> +netselect-0.3-r2.ebuild:
  Use tc-getCC compiler, fixes bug #193793, reported by Chris Slycord
  <cslycord AT gmail.com>

  30 Apr 2007; Cedric Krier <cedk@gentoo.org> netselect-0.3-r1.ebuild:
  Fix HOMEPAGE and SRC_URI for bug #176200

  15 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/netselect-0.3-bsd.patch, netselect-0.3-r1.ebuild:
  Add patch to make netselect work on non-Linux systems (BSDish), thanks to
  Timothy Redaelli in bug #140414. Add ~x86-fbsd keyword.

  09 Apr 2006; Markus Ullmann <jokey@gentoo.org> netselect-0.3-r1.ebuild:
  Changing fperms wrt bug #129265 and clean up

  25 Dec 2005; Diego Pettenò <flameeyes@gentoo.org>
  netselect-0.3-r1.ebuild:
  Use bindnow-flags function instead of -Wl,-z,now. Drop ppc-macos special case.

  09 Aug 2005; Aaron Walker <ka0ttic@gentoo.org> netselect-0.3-r1.ebuild:
  Stable on mips.
