@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX netselect-0.3-bsd.patch 1670 RMD160 0d93b937bbef10af53def6cd124e123fe12de3aa SHA1 eafea877b92d3ccc21563597f92711e47faca8df SHA256 b351edf5a8acfc6bece5ce0079129aa5896389478aac793e596f70b29db9583a
 DIST netselect-0.3.tar.gz 22047 RMD160 f57b7348549a033c008d3b67b85ef12a3f91c9aa SHA1 708512a6eddb2e9aee0ad80c72ddc63f08372cab SHA256 fe81942589d5219d030e5cecfb12787fb6d3613416cb326dea4952bf53f9c978
-EBUILD netselect-0.3-r1.ebuild 1086 RMD160 4e71edcd4c06e90c2ffb369decca8b68d2f930b8 SHA1 4a50839ed1e898f95c1fdda801d8b12e4ebf643b SHA256 9af1c0b819d2e4d5efdccf550278b40bdaf89b3b71f0b3aae3c02f04006792b9
-EBUILD netselect-0.3-r2.ebuild 1114 RMD160 3cc49c4400625383c7c7a7e8a1169d185ea195b4 SHA1 b683ae7e3a39a594c41e507a7b1f046710aab07c SHA256 5f7abd88854907f527faa3c07b31d58f29028d0182090d274b78f29b21866642
-MISC ChangeLog 4343 RMD160 13ee61c2086f75c8850f06b186adbd4f292e16c9 SHA1 4ca4bcc7f6e0d7c81f80c0b55eb4fc807090712a SHA256 23f90e01f6c233fb67c6c554935e3ff885d8b84b8bc63164ab2ab0c7cb24d594
+EBUILD netselect-0.3-r1.ebuild 1083 RMD160 8eeec7946a82099c4064009fef8d63a3f3ff245a SHA1 11140fad1745911e736cb9e86f28842a1a18b7f6 SHA256 b60d6de177211ef47f1a5758ef8df5ec287b3fd01b29a68e488734a962ca88d2
+EBUILD netselect-0.3-r2.ebuild 1117 RMD160 57c85d80b0d73ba2df2cb9ed3a897b8eee825b9b SHA1 72ad7a8623416d07a699e3ab3b939f413907c47a SHA256 6fd9ac3bb4a60bd2713a957e264aa893bb10b15aed3fe71175aca8f35e33de4f
+MISC ChangeLog 4521 RMD160 68c1f3ef024946e09d088cfe6e8f249bdb256338 SHA1 bbe89cb3be067d36bdf38498a50fd3f61a910721 SHA256 492b65519c402d25fca117fa1121f37b48c9224813476c7192085df0f7ac5ba9
 MISC metadata.xml 227 RMD160 917eb39a2068e2e2a26f5d8b8999abbe9f48bb4b SHA1 ff9d1f5383d9cede6afe1a4138b1dcc0ebdd179c SHA256 645ebb9d76e7763a81c4dee499147688e00258373d297ceb0b83b32eeb5fe44b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (SunOS)
+
+iEYEARECAAYFAk+/3o4ACgkQX3X2B8XHTonXBgCdEh9fkRNuMHe6kCY0SgxEx+Cq
+w7EAnj6ro+7JPZXJrIO/ycBRUQ1BjpBl
+=9HV4
+-----END PGP SIGNATURE-----
