@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/netselect
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/netselect/ChangeLog,v 1.37 2008/08/27 10:03:56 armin76 Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/netselect/ChangeLog,v 1.39 2011/02/06 07:50:14 leio Exp $
+
+  06 Feb 2011; Mart Raudsepp <leio@gentoo.org> netselect-0.3-r1.ebuild:
+  Drop to ~mips
+
+  16 Aug 2010; Harald van Dĳk <truedfx@gentoo.org> netselect-0.3-r2.ebuild:
+  Fix quoting
 
   27 Aug 2008; Raúl Porcel <armin76@gentoo.org> netselect-0.3-r1.ebuild,
   netselect-0.3-r2.ebuild:
